Edited the POM to allow the user to run from the maven command line.